objects/RLObject1__c.object
<CustomObject>
    <fields>
        <fullName>RLObject1Field1__c</fullName>
        <label>RLObject1Field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RLObject1Field2__c</fullName>
        <label>RLObject1Field2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RLObject1Field4__c</fullName>
        <label>RLObject1Field4</label>
        <type>Email</type>
    </fields>
</CustomObject>